--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
+<html>
+<body>
 
-<head>
-    hello
-</head>
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
+
+</body>
+</html>
